GNOME Bugzilla – Bug 747148
"Failed To Update" message box may be too large to fit into any screen
Last modified: 2015-04-14 09:05:30 UTC
Created attachment 300720 [details] Too large "Failed To Update" message box See the screenshot attached. The reason why it does not fit is that the error text is displayed with the standard GtkMessageDialog which does not work good with very long texts. We need a simple custom dialog box which looks almost the same as the GtkMessageDialog but features a GtkScrolledWindow inside. Also I suggest to view other occurrences of GtkMessageDialog and check if we are sure that the length of the message text is limited. If you wonder how I have achieved this bug: I have launched the offline update with many pending updates and no free disk space.
Created attachment 301087 [details] [review] Proposed solution This is not sophisticated but simple and working solution to this problem. This patch inserts a GtkScrolledWindow containing the message text into the message dialog. The height of the scrolled window is set to the height of the text label inside but no more than 300 pixels. The vertical scrollbar appears only if the label height is larger than the scrolled window so for smaller texts there should be no visual difference.
Created attachment 301088 [details] New look of the "Failed To Update" message dialog
Pushed to master, thanks!