offline updates: Scrolled content of the error message dialog

The detailed error message text for the offline updates may
contain many lines and must be scrollable. With this fix we
insert GtkScrolledWindow containing the message into the dialog.

https://bugzilla.gnome.org/show_bug.cgi?id=747148

Signed-off-by: Richard Hughes <richard@hughsie.com>